tests/expectations/parser/functions/const_input_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:4:16
     |
   4 |     function x(const x: u8) -> u8 {}
     |                ^^^^^"""]
